--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>user-service</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>user-application</module>
+        <module>user-container</module>
+        <module>user-dataaccess</module>
+        <module>user-domain</module>
+        <module>user-messaging</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
