--- a/assignment-service/assignment-container/src/main/resources/application.yml
+++ b/assignment-service/assignment-container/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=assignmentworkon&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified
     username: postgres
-    password: Sexyandiknowit1
+    password: 12345
     driver-class-name: org.postgresql.Driver
     platform: postgres
     initialization-mode: always
