--- a/user-service/user-container/src/main/resources/application.yml
+++ b/user-service/user-container/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=userworkon&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified
     username: postgres
-    password: Sexyandiknowit1
+    password: 12345
     driver-class-name: org.postgresql.Driver
     platform: postgres
     initialization-mode: always
